--- a/public/styles.css
+++ b/public/styles.css
@@ -353,6 +353,13 @@ header {
   display: none; /* Hidden by default */
 }
 
+#errorMessage {
+  color: red;
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: center;
+}
+
 .warning-text {
   color: red;
   font-size: 0.875rem;
@@ -570,7 +577,7 @@ input:checked + .slider:before {
 
 
 /* Recipe */
-#recipe {
+.recipe {
   margin-top: 20px;
 }
 
@@ -625,10 +632,8 @@ input:checked + .slider:before {
 .ingredients, .steps, .advice {
   margin-bottom: 20px;
   padding: 20px 25px;
-  /* Delete before hosting */
   border: 1px solid #ccc;
   border-radius: 8px;
-  /* Delet before hosting */
   background-color: #fff;
   min-height: 85px; /* Set a minimum height for consistency */
 }
@@ -1038,3 +1043,17 @@ input:checked + .slider:before {
   }
 }
 
+.loading-spinner {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid darkcyan; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  margin: 20px auto; /* Center the spinner */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
