--- a/public/my-substitutes.css
+++ b/public/my-substitutes.css
@@ -341,6 +341,35 @@ p {
   flex: 1;
 }
 
+.modal-ingredient-header {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.substitute-modal-description {
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+.modal-ingredient-input-area {
+  font-size: 1.125rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: darkslategray;
+}
+
+.modal-ingredient-input-area label {
+  margin: 0 10px 0 0; /* Add space to the right of the label */
+  white-space: nowrap;
+  display: flex;
+  align-items: center; /* Vertically center the label */
+}
+
+.modal-ingredient-input-area input {
+  flex: 1;
+}
+
 /* Button container styling */
 .button-container {
   text-align: right;
