--- a/public/favorite-recipes.css
+++ b/public/favorite-recipes.css
@@ -156,13 +156,27 @@ ul#favoriteList li button.delete-button:hover {
   margin-bottom: 20px;
 }
 
-#confirmDeleteButton {
-  padding: 8px 16px;
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px; /* Space between buttons */
+  margin-top: 20px; /* Add some margin to the top */
+}
+
+#confirmDeleteButton, #cancelDeleteButton {
+  flex: 1;
+  margin: 10px;
+  padding: 8px;
   cursor: pointer;
   font-size: 1rem;
   font-weight: bold;
   border-radius: 8px;
-  margin: 10px;
+  text-align: center;
+}
+
+#confirmDeleteButton {
+  border: 2px solid #aaa;
   background-color: #ff4d4d;
   color: white;
 }
@@ -172,12 +186,9 @@ ul#favoriteList li button.delete-button:hover {
 }
 
 #cancelDeleteButton {
-  padding: 8px 16px;
-  cursor: pointer;
-  font-size: 1rem;
-  border-radius: 8px;
-  margin: 10px;
-  border: 2px solid darkslategray;
+  color: gray;
+  border: 2px solid #ccc;
+  background-color: #eee;
 }
 
 #cancelDeleteButton:hover {
