--- a/public/my-substitutes.css
+++ b/public/my-substitutes.css
@@ -121,18 +121,69 @@ p {
   text-align: center; /* Center-align text and buttons */
 }
 
-#deleteSubstituteModal .modal-content {
+/* Delete ingredient modal styles */
+#deleteIngredientModal .modal-content {
   max-width: 400px;
+  text-align: center;
 }
 
-#confirmDeleteSubstituteButton {
-  padding: 8px 16px;
+#confirmDeleteIngredientButton, #cancelDeleteIngredientButton {
+  flex: 1;
+  margin: 10px;
+  padding: 8px;
   cursor: pointer;
   font-size: 1rem;
   font-weight: bold;
   border-radius: 8px;
-  margin: 10px;
+  text-align: center;
+}
+
+#confirmDeleteIngredientButton {
   background-color: #ff4d4d;
+  border: 2px solid #aaa;
+  color: white;
+}
+
+#confirmDeleteIngredientButton:hover {
+  background-color: #ff1a1a;
+}
+
+#cancelDeleteIngredientButton {
+  color: gray;
+  border: 2px solid #ccc;
+  background-color: #eee;
+}
+
+#cancelDeleteIngredientButton:hover {
+  background-color: #dddddd;
+}
+
+#deleteSubstituteModal .modal-content {
+  max-width: 400px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px; /* Space between buttons */
+  margin-top: 20px; /* Add some margin to the top */
+}
+
+#confirmDeleteSubstituteButton, #cancelDeleteSubstituteButton {
+  flex: 1;
+  margin: 10px;
+  padding: 8px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 8px;
+  text-align: center;
+}
+
+#confirmDeleteSubstituteButton {
+  background-color: #ff4d4d;
+  border: 2px solid #aaa;
   color: white;
 }
 
@@ -140,16 +191,13 @@ p {
   background-color: #ff1a1a;
 }
 
-#cancelDeleteSubstituteButton {
-  padding: 8px 16px;
-  cursor: pointer;
-  font-size: 1rem;
-  border-radius: 8px;
-  margin: 10px;
-  border: 2px solid darkslategray;
+#cancelDeleteSubstituteButton, #cancelSubstituteFormButton {
+  color: gray;
+  border: 2px solid #ccc;
+  background-color: #eee;
 }
 
-#cancelDeleteSubstituteButton:hover {
+#cancelDeleteSubstituteButton:hover, #cancelSubstituteFormButton:hover {
   background-color: #dddddd;
 }
 
@@ -171,7 +219,7 @@ p {
   flex: 1;
   padding: 4px;
   font-size: 1rem;
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   border-radius: 4px;
   width: min(46%, 200px);
 }
@@ -275,7 +323,7 @@ p {
   gap: 10px;
 }
 
-.edit-substitute-button, .delete-substitute-button, .edit-ingredient-button, .save-ingredient-button, .cancel-ingredient-button {
+.edit-ingredient-button, .delete-ingredient-button, #cancelIngredientFormButton, #cancelSubstituteFormButton, .save-ingredient-button, .cancel-ingredient-button, .edit-substitute-button, .delete-substitute-button {
   padding: 5px 5px;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -285,7 +333,12 @@ p {
   font-weight: bold; /* Ensure the font is bold */
 }
 
-.edit-ingredient-button {
+#submitIngredientFormButton, #cancelIngredientFormButton, #submitSubstituteFormButton, #cancelSubstituteFormButton {
+  flex: 1;
+}
+
+
+.edit-ingredient-button, .delete-ingredient-button {
   margin-left: 10px;
   font-size: 1rem;
 }
@@ -310,14 +363,29 @@ p {
   background-color: #007b7f;
 }
 
-.delete-substitute-button, .cancel-ingredient-button {
+.delete-ingredient-button, .delete-substitute-button {
   background-color: #ff4d4d;
   color: #fff;
 }
 
-.delete-substitute-button:hover, .cancel-ingredient-button:hover {
+.delete-ingredient-button, .delete-substitute-button:hover {
   background-color: #ff1a1a;
 }
+
+.cancel-ingredient-button {
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 8px;
+  color: gray;
+  border: 2px solid #ccc;
+  background-color: #eee;
+}
+
+.cancel-ingredient-button:hover {
+  background-color: #dddddd;
+}
+
 
 .veg {
   color: darkgreen;
