--- a/public/my-substitutes.css
+++ b/public/my-substitutes.css
@@ -140,7 +140,7 @@ p {
 
 #confirmDeleteIngredientButton {
   background-color: #ff4d4d;
-  border: 2px solid #aaa;
+  border: 1px solid #bbb;
   color: white;
 }
 
@@ -183,7 +183,7 @@ p {
 
 #confirmDeleteSubstituteButton {
   background-color: #ff4d4d;
-  border: 2px solid #aaa;
+  border: 1px solid #aaa;
   color: white;
 }
 
