--- a/public/styles.css
+++ b/public/styles.css
@@ -172,7 +172,7 @@ header {
 #registerButton, .submit-button {
   background-color: darkcyan;
   color: white;
-  border: 2px solid #aaa;
+  border: 1px solid #aaa;
 }
 
 #registerButton:hover, .submit-button:hover {
@@ -315,7 +315,7 @@ header {
 }
 
 #imageModal img {
-  max-width: min(480px, 100%); /* Set max width to 450px or 100%, whichever is smaller */
+  max-width: min(480px, 100%);
   vertical-align: middle;
   max-height: 80vh; /* Ensure the image fits within the viewport height */
 }
@@ -404,7 +404,7 @@ header {
   margin: 10px;
   background-color: darkcyan;
   color: white;
-  border: 2px solid #aaa;
+  border: 1px solid #aaa;
 }
 
 #confirmLogoutButton:hover {
@@ -469,7 +469,31 @@ header {
   cursor: pointer;
 }
 
+/* layout for recipe contents */
+.ingredients, .steps, .advice {
+  margin-bottom: 20px;
+  padding: 20px 25px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #fff;
+  min-height: 85px; /* Set a minimum height for consistency */
+}
+
+.ingredients h2, .steps h2, .advice h2 {
+  color: darkslategray;
+}
+
+.ingredients-footer p, .advice p {
+  margin: 10px 0;
+}
+
 /* Vegetarian Mode */
+.ingredients-header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .toggle-container {
   display: flex;
   flex-direction: column; /* Stack items vertically */
@@ -490,7 +514,6 @@ header {
   color: #555;
   margin-left: auto; /* Push the description to the right end */
   margin-top: 5px; /* Add some space above the text */
-  margin-bottom: 15px;
 }
 
 
@@ -614,12 +637,14 @@ input:checked + .slider:before {
   font-size: 2rem;
   color: darkslategray;
   margin-right: 10px; /* Add some space between the recipe name and the favorite button */
-} 
+  text-align: left; /* Align text to the left */
+  display: block; /* Ensure the element behaves as a block-level element */
+  word-wrap: break-word; /* Ensure long words break to fit within the container */
+}
 
 @media (max-width: 480px) {
   #recipeName {
     font-size: 1.5rem;
-    text-align: center; /* Center the recipe name on narrow screens */
     margin-right: 0; /* Remove margin on narrow screens */
   }
 }
@@ -649,29 +674,78 @@ input:checked + .slider:before {
   stroke: crimson;
 }
 
-/* layout for recipe contents */
-.ingredients, .steps, .advice {
-  margin-bottom: 20px;
-  padding: 20px 25px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  background-color: #fff;
-  min-height: 85px; /* Set a minimum height for consistency */
+/* Fading message for toggling favorite button */
+.fading-message {
+  position: fixed;
+  top: 150px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  z-index: 1000;
 }
 
-.ingredients h2, .steps h2, .advice h2 {
-  color: darkslategray;
+.fading-message.show {
+  opacity: 1;
 }
-
-.ingredients p, .advice p {
-  margin: 10px 0;
-}
-
 
 /* ingredients */
+.ingredient-container {
+  display: flex;
+  align-items: center;
+}
+
+/* Checkbox for the ingredient */
+.ingredient-checkbox {
+  margin-right: 10px;
+}
+
+/* Container for the ingredient content */
+.ingredient-content-container {
+  flex: 1; /* Use all available space */
+  display: flex;
+  flex-wrap: wrap; /* Allow wrapping */
+}
+
+/* Ingredient name */
+.ingredient-name {
+  flex: 1 1 auto; /* Allow the ingredient name to take up available space */
+  margin-right: 10px; /* Add space between the ingredient name and quantity */
+  white-space: nowrap; /* Prevent wrapping */
+  overflow: hidden; /* Hide overflow */
+  text-overflow: ellipsis; /* Add ellipsis for overflow text */
+}
+
+/* Ingredient quantity */
+.ingredient-quantity {
+  flex: 1 1 auto; /* Allow the ingredient quantity to take up available space */
+  margin-left: auto;
+  text-align: right;
+  white-space: normal; /* Allow wrapping */
+  word-break: break-all; /* Break words to ensure consistent line widths */
+  overflow: hidden; /* Hide overflow */
+  text-overflow: ellipsis; /* Add ellipsis for overflow text */
+  font-weight: bold;
+  text-wrap: balance;
+}
+
+.ingredient-content-container > * {
+  flex: 1 1 100%; /* Take up 100% of the available space when wrapped */
+  white-space: normal; /* Allow wrapping */
+}
+
+/* Handle cases where only .ingredient-name is present */
+.ingredient-container:only-child .ingredient-name {
+  flex: 1 1 100%; /* Take up 100% of the available space */
+  white-space: normal; /* Allow wrapping */
+}
+
 #checkAll {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   width: 20px;
   height: 20px;
   accent-color: gray;
@@ -682,22 +756,9 @@ input:checked + .slider:before {
   accent-color: rgb(0, 120, 255);
 }
 
-.ingredients-footer {
-  margin-top: 20px;
-}
-
-#searchSubstitutesButton {
-  padding: 10px 20px;
-  background-color: darkcyan;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  text-align: center;
-}
-
-#searchSubstitutesButton:hover {
-  background-color: #007b7f;
+/* Add margin-top to the first li element */
+.ingredients ul li:first-child {
+  margin-top: 10px;
 }
 
 .ingredients ul {
@@ -706,7 +767,7 @@ input:checked + .slider:before {
 }
 
 .ingredients ul li[class*="headline"]:not([class*="not-headline"]) {
-  margin-top: 24px;
+  margin-top: 16px;
   padding: 8px 0;
 }
 
@@ -727,20 +788,22 @@ input:checked + .slider:before {
   accent-color: rgb(0, 120, 255);
 }
 
-.ingredient-name {
-  flex: 1; /* Allow the ingredient name to take up available space */
-  margin-right: 10px; /* Add space between the ingredient name and quantity */
+.ingredients-footer {
+  margin-top: 20px;
 }
 
-.ingredient-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+#searchSubstitutesButton {
+  padding: 10px 20px;
+  background-color: darkcyan;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  text-align: center;
 }
 
-.ingredient-quantity {
-  margin-left: auto;
-  text-align: right;
+#searchSubstitutesButton:hover {
+  background-color: #007b7f;
 }
 
 
@@ -809,7 +872,7 @@ input:checked + .slider:before {
   font-size: 1rem;
   font-weight: bold;
   border-radius: 8px;
-  border: 2px solid #aaa;
+  border: 1px solid #aaa;
   text-align: center;
 }
 
