--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -69,12 +69,12 @@ header {
 }
 
 .site-title {
-  margin: 20px 0px 20px 50px;
-  }
+  margin: 20px 50px;
+}
 
 @media (max-width: 400px) {
   .site-title {
-    margin: 20px 0px 20px 20px;
+    margin: 20px;
   }
 }
 
@@ -82,7 +82,7 @@ header {
   margin: 0;
   padding: 0;
   text-align: center;
-  font-family: 'Pacifico', cursive;
+  font-family: 'Poetsen One', sans-serif;
 }
 
 .title-break {
