--- a/public/css/favorite-recipes.css
+++ b/public/css/favorite-recipes.css
@@ -97,8 +97,8 @@ ul#favoriteList li a {
   border-radius: 8px;
   cursor: pointer;
   height: 40px;
-  min-width: 60px; /* Set a fixed width for the button */
-  font-weight: bold; /* Ensure the font is bold */
+  min-width: 60px;
+  font-weight: bold;
   text-align: center;
 }
 
@@ -145,7 +145,7 @@ ul#favoriteList li a {
 .right-content {
   display: flex;
   gap: 10px; /* Space between buttons */
-  margin-left: auto; /* Push the buttons to the right */
+  margin-left: auto; /* Put the buttons to the right */
 }
 
 ul#favoriteList li button.delete-button, #deleteSelectedButton {
@@ -159,13 +159,13 @@ ul#favoriteList li button.delete-button:hover, #deleteSelectedButton:hover {
 
 @media (max-width: 480px) {
   .fav-recipe-buttons {
-    flex-direction: column; /* Stack buttons vertically */
+    flex-direction: column;
     gap: 5px; /* Space between buttons */
   }
 
   .fav-search-recipe-button, ul#favoriteList li button.delete-button {
     height: 32px;
-    width: 100%; /* Full width for the button */
+    width: 100%;
   }
 
   ul#favoriteList li {
@@ -180,7 +180,7 @@ ul#favoriteList li button.delete-button:hover, #deleteSelectedButton:hover {
 /* confirm-delete modal styles */
 #confirmDeleteModal .modal-content {
   max-width: 400px; /* Maximum width for the logout modal */
-  text-align: center; /* Center-align text and buttons */
+  text-align: center;
 }
 
 #confirmDeleteModal p {
